--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
+  "plugins": [
+    ["dynamic-import-node"],
+    ["transform-runtime",
+      {
+        "polyfill": false,
+        "regenerator": true
+      }
+    ],
+    ["transform-object-rest-spread"]
+  ],
   "presets": [
     "env",
     "vue"
