--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "module": "es2015",
+    "module": "esnext",
     "moduleResolution": "node",
     "isolatedModules": false,
     "experimentalDecorators": true,
