--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue": "^2.5.17",
     "vue-class-component": "^7.1.0",
     "vue-hot-reload-api": "^2.3.0",
+    "vue-i18n": "^8.12.0",
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -43,6 +44,8 @@
     "autoprefixer": "^9.1.3",
     "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-vue": "^2.0.2",
     "cross-env": "^5.1.3",
