--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "js-logger": "^1.6.0",
+    "moment": "^2.24.0",
     "password-hash": "^1.2.2",
     "postcss-modules": "^1.3.2",
     "vue": "^2.5.17",
