--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "babel-polyfill": "^6.26.0",
     "js-logger": "^1.6.0",
     "moment": "^2.24.0",
-    "password-hash": "^1.2.2",
     "postcss-modules": "^1.3.2",
     "vue": "^2.5.17",
     "vue-class-component": "^7.1.0",
@@ -39,30 +38,30 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@types/jest": "23.1.0",
-    "@vue/component-compiler-utils": "^2.6.0",
+    "@types/jest": "24.0.16",
+    "@vue/component-compiler-utils": "^3.0.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "autoprefixer": "^9.1.3",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "^10.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-vue": "^2.0.2",
     "cross-env": "^5.1.3",
-    "eslint": "^5.5.0",
-    "eslint-plugin-vue": "^4.7.1",
-    "jest": "^23.6.0",
-    "jest-junit": "^5.0.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "jest": "^24.8.0",
+    "jest-junit": "^7.0.0",
     "jest-serializer-vue": "^2.0.2",
     "jest-transform-stub": "^2.0.0",
+    "node-sass": "^4.12.0",
     "parcel-bundler": "^1.9.7",
-    "sass": "^1.21.0",
-    "ts-jest": "^22.4.6",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.9.2",
-    "vue-jest": "^2.6.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.5.3",
+    "vue-jest": "^3.0.4",
     "vue-template-compiler": "^2.5.17"
   }
 }
