--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^12.0.8",
+    "@vue/component-compiler-utils": "^2.0.0",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "get-user-locale": "^1.2.0",
     "js-logger": "^1.6.0",
     "moment": "^2.24.0",
     "postcss-modules": "^1.3.2",
