--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.139",
     "@types/node": "^12.0.8",
     "@vue/component-compiler-utils": "^2.0.0",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "firebase": "^6.6.2",
     "get-user-locale": "^1.2.0",
     "js-logger": "^1.6.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "postcss-modules": "^1.3.2",
     "vue": "^2.5.17",
@@ -37,6 +40,7 @@
     "vue-i18n": "^8.12.0",
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.1",
+    "vuefire": "^2.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
