--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-class-component": "^7.1.0",
     "vue-hot-reload-api": "^2.3.0",
     "vue-i18n": "^8.12.0",
+    "vue-meta": "^2.2.2",
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.1",
     "vuefire": "^2.1.2",
