--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.139",
     "@types/node": "^12.0.8",
+    "@types/universal-analytics": "^0.4.3",
     "@vue/component-compiler-utils": "^2.0.0",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
@@ -33,6 +34,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "postcss-modules": "^1.3.2",
+    "universal-analytics": "^0.4.20",
     "vue": "^2.5.17",
     "vue-class-component": "^7.1.0",
     "vue-hot-reload-api": "^2.3.0",
