--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
         "regenerator": true
       }
     ],
-    ["transform-object-rest-spread"]
+    ["transform-object-rest-spread"],
+    ["transform-vue-jsx"]
   ],
   "presets": [
     "env",
