--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.139",
-    "@types/node": "^12.0.8",
     "@types/universal-analytics": "^0.4.3",
-    "@vue/component-compiler-utils": "^2.0.0",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "firebase": "^6.6.2",
@@ -46,19 +44,29 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@luchanso/parcel-plugin-typescript": "^1.0.0",
     "@types/jest": "24.0.16",
-    "@vue/component-compiler-utils": "^3.0.0",
+    "@types/node": "^12.7.9",
+    "@vue/component-compiler-utils": "^2.6.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "autoprefixer": "^9.1.3",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-vue": "^2.0.2",
     "cross-env": "^5.1.3",
     "dart-sass": "^1.22.12",
     "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.15.1",
     "eslint-plugin-vue": "^5.2.3",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
@@ -66,11 +74,12 @@
     "jest-transform-stub": "^2.0.0",
     "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
+    "parcel-plugin-eslint": "^1.0.7",
     "ts-jest": "^24.0.2",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.5.3",
     "vue-jest": "^3.0.4",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.6.10"
   }
 }
