--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@luchanso/parcel-plugin-typescript": "^1.0.0",
     "@types/jest": "24.0.16",
     "@types/node": "^12.7.9",
     "@vue/component-compiler-utils": "^2.6.0",
@@ -75,6 +74,7 @@
     "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-eslint": "^1.0.7",
+    "parcel-plugin-inlinesvg": "^0.1.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^8.0.1",
