--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jest-junit": "^7.0.0",
     "jest-serializer-vue": "^2.0.2",
     "jest-transform-stub": "^2.0.0",
+    "marked": "^0.7.0",
     "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-eslint": "^1.0.7",
