--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "index.ts",
   "scripts": {
     "eslint": "eslint --fix --ext .js,.vue src",
+    "predev": "npm run cleanDev",
     "dev": "parcel serve src/index.html -d dev-dist --public-url /dev-dist/ --open",
     "clean": "rimraf .cache/ && rimraf dist/ && rimraf build/",
+    "cleanDev": "rimraf .cache/ && rimraf dev-dist/ && rimraf build/",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production parcel build ./src/index.html --public-url ./",
     "deploy": "npm run build && firebase deploy --only hosting",
@@ -76,11 +78,26 @@
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-eslint": "^1.0.7",
     "parcel-plugin-inlinesvg": "^0.1.1",
+    "parcel-plugin-static-files-copy": "^2.2.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.5.3",
     "vue-jest": "^3.0.4",
     "vue-template-compiler": "^2.6.10"
+  },
+  "staticFiles": {
+    "staticPath": [
+      {
+        "outDirPattern": "**/dev-dist",
+        "staticPath": "static",
+        "watcherGlob": "**/*"
+      },
+      {
+        "outDirPattern": "**/dist",
+        "staticPath": "static",
+        "watcherGlob": "**/*"
+      }
+    ]
   }
 }
