--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue-meta": "^2.2.2",
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.1",
+    "vue-toasted": "^1.1.27",
     "vuefire": "^2.1.2",
     "vuex": "^3.0.1"
   },
