--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-eslint": "^1.0.7",
+    "parcel-plugin-imagemin": "^3.0.0",
     "parcel-plugin-inlinesvg": "^0.1.1",
     "parcel-plugin-static-files-copy": "^2.2.1",
     "ts-jest": "^24.0.2",
