--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wedding-source",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Source for wedding website",
   "author": "Morten Broesby-Olsen <mortenbroesby@gmail.com>",
   "main": "index.ts",
@@ -24,82 +24,66 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "^4.14.139",
-    "@types/universal-analytics": "^0.4.3",
-    "axios": "^0.19.0",
-    "babel-polyfill": "^6.26.0",
-    "firebase": "^6.6.2",
-    "get-user-locale": "^1.2.0",
-    "js-logger": "^1.6.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "postcss-modules": "^1.3.2",
-    "universal-analytics": "^0.4.20",
-    "vue": "^2.5.17",
-    "vue-class-component": "^7.1.0",
-    "vue-hot-reload-api": "^2.3.0",
-    "vue-i18n": "^8.12.0",
-    "vue-meta": "^2.2.2",
-    "vue-property-decorator": "^8.2.1",
-    "vue-router": "^3.0.1",
-    "vue-toasted": "^1.1.27",
-    "vuefire": "^2.1.2",
-    "vuex": "^3.0.1"
+    "@types/lodash": "4.14.139",
+    "@types/universal-analytics": "0.4.3",
+    "axios": "0.19.0",
+    "babel-polyfill": "6.26.0",
+    "firebase": "6.6.2",
+    "get-user-locale": "1.2.0",
+    "js-logger": "1.6.0",
+    "lodash": "4.17.15",
+    "moment": "2.24.0",
+    "postcss-modules": "1.3.2",
+    "universal-analytics": "0.4.20",
+    "vue": "2.6.10",
+    "vue-class-component": "7.1.0",
+    "vue-hot-reload-api": "2.3.0",
+    "vue-i18n": "8.12.0",
+    "vue-meta": "2.2.2",
+    "vue-property-decorator": "8.2.1",
+    "vue-router": "3.0.1",
+    "vue-toasted": "1.1.27",
+    "vuefire": "2.1.2",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "@types/jest": "24.0.16",
-    "@types/node": "^12.7.9",
-    "@vue/component-compiler-utils": "^2.6.0",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "autoprefixer": "^9.1.3",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.2",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-vue": "^2.0.2",
-    "cross-env": "^5.1.3",
-    "dart-sass": "^1.22.12",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.15.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "jest": "^24.8.0",
-    "jest-junit": "^7.0.0",
-    "jest-serializer-vue": "^2.0.2",
-    "jest-transform-stub": "^2.0.0",
-    "marked": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "parcel-bundler": "^1.12.3",
-    "parcel-plugin-eslint": "^1.0.7",
-    "parcel-plugin-imagemin": "^3.0.0",
-    "parcel-plugin-inlinesvg": "^0.1.1",
-    "parcel-plugin-static-files-copy": "^2.2.1",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.9.1",
-    "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.5.3",
-    "vue-jest": "^3.0.4",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "staticFiles": {
-    "staticPath": [
-      {
-        "outDirPattern": "**/dev-dist",
-        "staticPath": "static",
-        "watcherGlob": "**/*"
-      },
-      {
-        "outDirPattern": "**/dist",
-        "staticPath": "static",
-        "watcherGlob": "**/*"
-      }
-    ]
+    "@types/node": "12.7.9",
+    "@vue/component-compiler-utils": "2.6.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "autoprefixer": "9.1.3",
+    "babel-core": "6.26.3",
+    "babel-eslint": "10.0.2",
+    "babel-helper-vue-jsx-merge-props": "2.0.3",
+    "babel-plugin-syntax-jsx": "6.18.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-plugin-transform-vue-jsx": "3.7.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-vue": "2.0.2",
+    "cross-env": "5.1.3",
+    "dart-sass": "1.22.12",
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-vue": "2.0.2",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.15.1",
+    "eslint-plugin-vue": "5.2.3",
+    "jest": "24.8.0",
+    "jest-junit": "7.0.0",
+    "jest-serializer-vue": "2.0.2",
+    "jest-transform-stub": "2.0.0",
+    "marked": "0.7.0",
+    "node-sass": "4.12.0",
+    "parcel-bundler": "1.12.3",
+    "parcel-plugin-eslint": "1.0.7",
+    "parcel-plugin-inlinesvg": "0.1.1",
+    "ts-jest": "24.0.2",
+    "tslint": "5.9.1",
+    "tslint-config-standard": "8.0.1",
+    "typescript": "3.5.3",
+    "vue-jest": "3.0.4",
+    "vue-template-compiler": "2.6.10"
   }
 }
