--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "js-logger": "1.6.0",
     "lodash": "4.17.15",
     "moment": "2.24.0",
+    "parcel-plugin-static-files-copy": "^2.2.1",
     "postcss-modules": "1.3.2",
     "universal-analytics": "0.4.20",
     "vue": "2.6.10",
@@ -85,5 +86,19 @@
     "typescript": "3.5.3",
     "vue-jest": "3.0.4",
     "vue-template-compiler": "2.6.10"
+  },
+  "staticFiles": {
+    "staticPath": [
+      {
+        "outDirPattern": "**/dev-dist",
+        "staticPath": "static",
+        "watcherGlob": "**/*"
+      },
+      {
+        "outDirPattern": "**/dist",
+        "staticPath": "static",
+        "watcherGlob": "**/*"
+      }
+    ]
   }
 }
