--- a/package.json
+++ b/package.json
@@ -80,12 +80,21 @@
     "parcel-bundler": "1.12.3",
     "parcel-plugin-eslint": "1.0.7",
     "parcel-plugin-inlinesvg": "0.1.1",
+    "parcel-plugin-sw-cache": "^0.3.1",
     "ts-jest": "24.0.2",
     "tslint": "5.9.1",
     "tslint-config-standard": "8.0.1",
     "typescript": "3.5.3",
     "vue-jest": "3.0.4",
     "vue-template-compiler": "2.6.10"
+  },
+  "cache": {
+    "disablePlugin": true,
+    "inDev": true,
+    "clearDist": true,
+		"strategy": "inject",
+		"swSrc": "./src/service-worker.js",
+		"swDest": "service-worker.js"
   },
   "staticFiles": {
     "staticPath": [
