--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "allowSyntheticDefaultImports": true
   },
   "include": [
-    "./src/**/*.ts"
+    "./src/**/*.ts", "src/service-worker.js"
   ],
   "exclude": [
     "node_modules/**/*"
