--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
   "devDependencies": {
     "@types/jest": "24.0.16",
     "@types/node": "12.7.9",
-    "@types/workbox-sw": "^4.2.1",
     "@vue/component-compiler-utils": "2.6.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "autoprefixer": "9.1.3",
@@ -72,6 +71,8 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.15.1",
     "eslint-plugin-vue": "5.2.3",
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.3.0",
     "jest": "24.8.0",
     "jest-junit": "7.0.0",
     "jest-serializer-vue": "2.0.2",
