Switch to lodash-es for tree-shaking. Add fullheight mixin. Add guards for CSS variables.

--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "4.14.144",
+    "@types/lodash-es": "^4.17.3",
     "@types/universal-analytics": "0.4.3",
     "axios": "0.19.0",
     "babel-polyfill": "6.26.0",
     "firebase": "7.2.0",
     "get-user-locale": "1.2.0",
     "js-logger": "1.6.0",
-    "lodash": "4.17.15",
+    "lodash-es": "^4.17.15",
     "moment": "2.24.0",
     "parcel-plugin-static-files-copy": "^2.2.1",
     "postcss-modules": "1.4.1",
