--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,7 @@
     ]
   },
   "hosting": {
-    "public": "dist",
+    "public": "public",
     "cleanUrls": true,
     "ignore": [
       "firebase.json",
