--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "parcel-bundler": "1.12.4",
     "parcel-plugin-eslint": "1.0.7",
     "parcel-plugin-inlinesvg": "0.1.1",
+    "sass": "^1.26.10",
     "ts-jest": "24.1.0",
     "tslint": "5.20.0",
     "tslint-config-standard": "8.0.1",
